Fix NavbarHover and text-hover alignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -31,18 +31,20 @@ h1 {
   grid-template-columns: 1fr;
   background-color: #5c5c5c;
   color: white;
+      height: 50px;
 }
 
 .nav-wrapper {
   display: flex;
-  justify-content: space-between;
-  padding: 15px;
-  margin-left: 200px;
-  margin-right: 200px;
+    justify-content: space-between;
+    align-items: center;    
+    margin-left: 200px;
+    margin-right: 200px;    
 }
 
 .nav-left-side {
   display: flex;
+    height: 100%;
 }
 
 .nav-wrapper > .nav-left-side > div {
@@ -52,10 +54,14 @@ h1 {
 }
 
 .nav-link-wrapper {
-  height: 22px;
-  border-bottom: 1px solid transparent;
-  transition: border-bottom 0.5s;
-  overflow: hidden;
+      border-bottom: 1px solid transparent;
+    transition: border-bottom 0.5s;
+    overflow: visible;
+    height: 100%;
+    justify-content: center;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 .active-nav-link {
@@ -77,8 +83,9 @@ h1 {
 }
 
 .dropdown {
-  float: left;
-  overflow: hidden;
+ display: flex;
+    align-items: center;
+    height: 100%;
 }
 
 .dropbtn {
@@ -87,20 +94,25 @@ h1 {
 
 .dropdown .dropbtn {
   font-size: 16px;
-  border: none;
-  outline: none;
-  color: white;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
+    border: none;
+    outline: none;
+    color: white;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+    height: 100%;
+    display: flex;
+    position: relative;
+    align-items: center;
+    text-shadow: 0 0 black;
 }
 
 .dropdown-content {
   display:none;
   position: absolute;
-  margin-top: 21px;
+      top: 50px;
   background-color: #f9f9f9;
-  min-width: 100px;
+      min-width: 150px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
@@ -171,14 +183,14 @@ h1 {
 .img-text-wrapper {
   position: absolute;
   top: 0;
+  width:100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100%;
   text-align: center;
-  padding-left: 95px;
-  padding-right: 95px;
+  
 }
 
 .img-text-wrapper .subtitle {
